<resources>
    <string name="app_name">PhoneApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="terms_and_conditions">Proxy is an application for recording and analysing user movement and health data. During the use of this application, you need to call your partial permission and collect some of the uploaded devices and individual information.\n\nPlease read the Proxy <a href="https://www.google.com/">Privacy Policy</a> &amp; Proxy <a href="https://www.google.com/">User Agreement</a> carefully. Click agree to indicate that you agree. </string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_wellness">Wellness</string>
    <string name="menu_health">Health</string>
    <string name="menu_medication">Medication</string>
    <string name="menu_record">Record</string>
    <string name="menu_appointments">Appointments</string>
    <string name="menu_safety">Safety</string>
    <string name="menu_services">Services</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_support">Support</string>
    <string name="banner">/6499/example/banner</string>
    <string name="inter">/6499/example/interstitial</string>
    <string name="Privacypolicy">https://www.google.com/</string>
    <string name="default_message">Message here</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="add_info_text">Please provide some information to customize the experience for you…!!</string>
    <string name="android_animations_lib_name">AndroidAnimations</string>
    <string name="app_header_name_1">Let\s Track Your</string>
    <string name="app_header_name_2">Health</string>
    <string name="app_temp_info">The normal body temperature is between 36.5 and 37.5°C (97.7 and 99.5°F).\n\nIt is called Hypothermia is the temperature is less than 35°C (95°F).\n\nFever or Hyperthermia is a temperature greater than 37.5°C and less than 38.3°C (99.5 and 100.9°F).</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="custom_intake_hint">Enter your custom intake target in ml</string>
    <string name="custom_intake_target">Custom intake target (ml)</string>
    <string name="default_web_client_id">72544605869-k5skual8bm7kqgofj64ip96a677tbkpa.apps.googleusercontent.com</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="gcm_defaultSenderId">72544605869</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="item_view_role_description">Tab</string>
    <string name="lbl_30_mins">30 Mins</string>
    <string name="lbl_45_mins">45 Mins</string>
    <string name="lbl_60_mins">60 Mins</string>
    <string name="lbl_add">ADD</string>
    <string name="lbl_add_profile">Add Profile</string>
    <string name="lbl_add_temp_cel">Body Temperature (° C)</string>
    <string name="lbl_add_temp_data">Add Temperature Data</string>
    <string name="lbl_add_temp_fah">Body Temperature (° F)</string>
    <string name="lbl_age">Age</string>
    <string name="lbl_all">All</string>
    <string name="lbl_birth_date">Birth Date</string>
    <string name="lbl_blood_count">Blood Count</string>
    <string name="lbl_blood_pressure">Blood Pressure</string>
    <string name="lbl_blood_sugar">Blood Sugar</string>
    <string name="lbl_bmi">BMI</string>
    <string name="lbl_bmi_between_15_and_16">Between 15 and 16</string>
    <string name="lbl_bmi_between_16_and_18.5">Between 16 and 18.5</string>
    <string name="lbl_bmi_between_18.5_and_25">Between 18.5 and 25</string>
    <string name="lbl_bmi_between_25_and_30">Between 25 and 30</string>
    <string name="lbl_bmi_between_30_and_35">Between 30 and 35</string>
    <string name="lbl_bmi_between_35_and_40">Between 35 and 40</string>
    <string name="lbl_bmi_category">BMI Category</string>
    <string name="lbl_bmi_detail">The Body Mass Index (BMI) Calculator can be used to calculate BMI value and corresponding weight status while taking age into consideration. Use the \Metric System\ for the International System of Units or the \Imperial System\ to convert units into US units. Note that the calculator also computes the Ponderal Index in addition to BMI both of which are discussed below in detail.</string>
    <string name="lbl_bmi_less_15">Less than 15</string>
    <string name="lbl_bmi_over_40">Over 40</string>
    <string name="lbl_bmi_result_moderately_obese">Moderately obese</string>
    <string name="lbl_bmi_result_normal">Normal (healthy weight)</string>
    <string name="lbl_bmi_result_overweight">Overweight</string>
    <string name="lbl_bmi_result_severely">Severely underweight</string>
    <string name="lbl_bmi_result_severely_obese">Severely obese</string>
    <string name="lbl_bmi_result_underweight">Underweight</string>
    <string name="lbl_bmi_result_very_severely">Very severely underweight</string>
    <string name="lbl_bmi_result_very_severely_obese">Very severely obese</string>
    <string name="lbl_bmi_status">BMI Status</string>
    <string name="lbl_body_temp">Body Temp</string>
    <string name="lbl_bp_status">Blood Pressure Status</string>
    <string name="lbl_bpm">bpm</string>
    <string name="lbl_bs_status">Blood Sugar Status</string>
    <string name="lbl_cancel">Cancel</string>
    <string name="lbl_centimeter">Centimeter</string>
    <string name="lbl_chart_blood_count">Blood Count</string>
    <string name="lbl_chart_blood_pressure">Blood Pressure</string>
    <string name="lbl_chart_blood_sugar">Blood Sugar</string>
    <string name="lbl_chart_bmi">BMI</string>
    <string name="lbl_chart_body_temp">Body Temp</string>
    <string name="lbl_chart_cholesterol">Cholesterol</string>
    <string name="lbl_chart_heart_rate">Heart Rate</string>
    <string name="lbl_chart_weight">Weight</string>
    <string name="lbl_cholesterol">Cholesterol</string>
    <string name="lbl_cm">Cm</string>
    <string name="lbl_color">Color</string>
    <string name="lbl_continue">Continue</string>
    <string name="lbl_current_bmi">Current BMI</string>
    <string name="lbl_current_bmi_result">Your Current BMI Result</string>
    <string name="lbl_custom">Custom</string>
    <string name="lbl_custom_duration">Select Chart Time Duration</string>
    <string name="lbl_custom_target">Custom Target</string>
    <string name="lbl_dash">-----</string>
    <string name="lbl_date">Date</string>
    <string name="lbl_deg_fahrenheit">°F</string>
    <string name="lbl_delete">Delete</string>
    <string name="lbl_diastolic">Diastolic</string>
    <string name="lbl_done">Done</string>
    <string name="lbl_edit">Edit</string>
    <string name="lbl_empty_blood_count_data">No Blood Count data available!</string>
    <string name="lbl_empty_bmi_data">No BMI data available!</string>
    <string name="lbl_empty_bp_data">No Blood Pressure data available!</string>
    <string name="lbl_empty_bs_data">No Blood Sugar data available!</string>
    <string name="lbl_empty_bt_data">No Body Temperature data available!</string>
    <string name="lbl_empty_cholesterol_data">No Cholesterol data available!</string>
    <string name="lbl_empty_heart_rate_data">No Heart Rate data available!</string>
    <string name="lbl_empty_medicine_data">No Medicines available!</string>
    <string name="lbl_empty_profile_data">No Profile data available!</string>
    <string name="lbl_empty_weight_data">No Weight data available!</string>
    <string name="lbl_end_date">End Date</string>
    <string name="lbl_feet">Feet</string>
    <string name="lbl_feet_inches">Feet &amp; Inches</string>
    <string name="lbl_fever_status">Your body temperature shows that you have</string>
    <string name="lbl_first_last_name">First &amp; Last Name</string>
    <string name="lbl_gender">Gender</string>
    <string name="lbl_hdl_header">HDL Good (mg/dL)</string>
    <string name="lbl_header_add">Add</string>
    <string name="lbl_header_add_new">Add New</string>
    <string name="lbl_header_blood">Blood</string>
    <string name="lbl_header_blood_count_data">Blood Count</string>
    <string name="lbl_header_blood_pressure">Blood Pressure</string>
    <string name="lbl_header_blood_sugar">Blood Sugar</string>
    <string name="lbl_header_bmi">Body Mass Index</string>
    <string name="lbl_header_body">Body</string>
    <string name="lbl_header_body_temp_data">Body Temperature</string>
    <string name="lbl_header_cholesterol">Cholesterol</string>
    <string name="lbl_header_cholesterol_data">Cholesterol Data</string>
    <string name="lbl_header_count_data">Count Data</string>
    <string name="lbl_header_data">Data</string>
    <string name="lbl_header_health">Health</string>
    <string name="lbl_header_heart">Heart</string>
    <string name="lbl_header_heart_rate">Heart Rate</string>
    <string name="lbl_header_lets_track">Let\s Track Your</string>
    <string name="lbl_header_mass_index">Mass Index</string>
    <string name="lbl_header_medicine">Medicines Data</string>
    <string name="lbl_header_medicines">Medicines</string>
    <string name="lbl_header_pressure_data">Pressure Data</string>
    <string name="lbl_header_profile">Profile</string>
    <string name="lbl_header_profiles">Profiles</string>
    <string name="lbl_header_rate_data">Rate Data</string>
    <string name="lbl_header_reminder">Reminder</string>
    <string name="lbl_header_settings">Settings</string>
    <string name="lbl_header_sugar_data">Sugar Data</string>
    <string name="lbl_header_temp_data">Temperature Data</string>
    <string name="lbl_header_user">User</string>
    <string name="lbl_header_weight">Weight Data</string>
    <string name="lbl_heading_ADAG_formula">A1c-Derived Average Glucose [ADAG] \nAG = 28.7 × HbA1c − 46.7</string>
    <string name="lbl_heading_DCCT_formula">Diabetes Control and Complications Trial [DCCT] \nAG = 35.6 × HbA1c − 77.3</string>
    <string name="lbl_heading_age">Age :</string>
    <string name="lbl_heading_automatic_value">Automatically determined values</string>
    <string name="lbl_heading_blood_sugar">Blood Sugar</string>
    <string name="lbl_heading_current_status">Current Status</string>
    <string name="lbl_heading_gender">Gender</string>
    <string name="lbl_heading_hemoglobin_level">Hemoglobin Level (HbA1c) (%)</string>
    <string name="lbl_heading_ketone_level">Ketone Level (mg/Dl)</string>
    <string name="lbl_heart_rate">Heart Rate</string>
    <string name="lbl_male">Male</string>
    <string name="lbl_name">Name</string>
    <string name="lbl_normal">Normal</string>
    <string name="lbl_row_diabetes">Diabetes</string>
    <string name="lbl_row_low">Low</string>
    <string name="lbl_row_pre_diabetes">Pre Diabetes</string>
</resources>