<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" android:fitsSystemWindows="true" android:layout_width="match_parent" android:layout_height="wrap_content">
    <RelativeLayout android:id="@+id/dialog_bmi_status_rel_main" android:background="@drawable/dialog_background" android:layout_width="match_parent" android:layout_height="wrap_content">
        <RelativeLayout android:id="@+id/dialog_bmi_status_rel_header" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:layout_marginTop="@dimen/_5sdp" android:layout_marginRight="@dimen/_10sdp">
            <TextView android:textSize="@dimen/_13sdp" android:textColor="@color/dialog_header_color" android:id="@+id/dialog_bmi_status_txt_header" android:paddingTop="@dimen/_5sdp" android:paddingBottom="@dimen/_5sdp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lbl_bmi_status" android:layout_centerHorizontal="true" />
        </RelativeLayout>
        <LinearLayout android:orientation="vertical" android:id="@+id/dialog_bmi_status_lin_message" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:layout_marginTop="@dimen/_10sdp" android:layout_marginRight="@dimen/_10sdp" android:layout_below="@+id/dialog_bmi_status_rel_header">
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="@dimen/_40sdp">
                <View android:background="@color/row_status_color_1" android:layout_width="@dimen/_30sdp" android:layout_height="@dimen/_10sdp"/>
                <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/dialog_header_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:text="@string/lbl_bmi_result_very_severely" android:lineSpacingExtra="@dimen/_4sdp" android:fontFamily="@font/roboto_regular"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="@dimen/_40sdp">
                <View android:background="@color/row_status_color_2" android:layout_width="@dimen/_30sdp" android:layout_height="@dimen/_10sdp"/>
                <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/dialog_header_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:text="@string/lbl_bmi_result_severely" android:lineSpacingExtra="@dimen/_4sdp" android:fontFamily="@font/roboto_regular"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="@dimen/_40sdp">
                <View android:background="@color/row_status_color_3" android:layout_width="@dimen/_30sdp" android:layout_height="@dimen/_10sdp"/>
                <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/dialog_header_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:text="@string/lbl_bmi_result_underweight" android:lineSpacingExtra="@dimen/_4sdp" android:fontFamily="@font/roboto_regular"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="@dimen/_40sdp">
                <View android:background="@color/row_status_color_4" android:layout_width="@dimen/_30sdp" android:layout_height="@dimen/_10sdp"/>
                <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/dialog_header_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:text="@string/lbl_bmi_result_normal" android:lineSpacingExtra="@dimen/_4sdp" android:fontFamily="@font/roboto_regular"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="@dimen/_40sdp">
                <View android:background="@color/row_status_color_5" android:layout_width="@dimen/_30sdp" android:layout_height="@dimen/_10sdp"/>
                <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/dialog_header_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:text="@string/lbl_bmi_result_overweight" android:lineSpacingExtra="@dimen/_4sdp" android:fontFamily="@font/roboto_regular"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="@dimen/_40sdp">
                <View android:background="@color/row_status_color_6" android:layout_width="@dimen/_30sdp" android:layout_height="@dimen/_10sdp"/>
                <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/dialog_header_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:text="@string/lbl_bmi_result_moderately_obese" android:lineSpacingExtra="@dimen/_4sdp" android:fontFamily="@font/roboto_regular"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="@dimen/_40sdp">
                <View android:background="@color/row_status_color_7" android:layout_width="@dimen/_30sdp" android:layout_height="@dimen/_10sdp"/>
                <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/dialog_header_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:text="@string/lbl_bmi_result_severely_obese" android:lineSpacingExtra="@dimen/_4sdp" android:fontFamily="@font/roboto_regular"/>
            </LinearLayout>
            <LinearLayout android:gravity="center_vertical" android:orientation="horizontal" android:layout_width="match_parent" android:layout_height="@dimen/_40sdp">
                <View android:background="@color/row_status_color_8" android:layout_width="@dimen/_30sdp" android:layout_height="@dimen/_10sdp"/>
                <TextView android:textSize="@dimen/_12sdp" android:textColor="@color/dialog_header_color" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/_10sdp" android:text="@string/lbl_bmi_result_very_severely_obese" android:lineSpacingExtra="@dimen/_4sdp" android:fontFamily="@font/roboto_regular"/>
            </LinearLayout>
        </LinearLayout>
        <RelativeLayout android:id="@+id/dialog_bmi_status_rel_buttons" android:layout_width="match_parent" android:layout_height="@dimen/_35sdp" android:layout_marginLeft="@dimen/_10sdp" android:layout_marginTop="@dimen/_10sdp" android:layout_marginRight="@dimen/_10sdp" android:layout_marginBottom="@dimen/_5sdp" android:layout_below="@+id/dialog_bmi_status_lin_message">
            <Button android:textSize="@dimen/_13sdp" android:textColor="@color/white" android:id="@+id/dialog_bmi_status_btn_ok" android:background="@drawable/menu_button_selector" android:layout_width="@dimen/_100sdp" android:layout_height="@dimen/_30sdp" android:text="OK" android:layout_centerHorizontal="true" android:layout_centerVertical="true" android:textAllCaps="true" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
